fix: widen clickable area to toggle layer visibility

--- a/munimap/frontend/sass/components/sidebar.sass
+++ b/munimap/frontend/sass/components/sidebar.sass
@@ -159,6 +159,8 @@
           vertical-align: sub
 
         .layer-title
+          display: block
+          box-sizing: border-box
           cursor: pointer
 
         .layer-line
